...
    <string name="generic_confirm_capitalized" tools:ignore="ButtonCase">CONFIRM</string>
    <string name="generic_continue">Continue</string>
    <string name="generic_continue_capitalized" tools:ignore="ButtonCase">CONTINUE</string>
    <string name="generic_verify_capitalized" tools:ignore="ButtonCase">VERIFY</string>
    <string name="generic_enable_capitalized" tools:ignore="ButtonCase">ENABLE</string>
    <string name="generic_success">Success</string>
    <string name="generic_close">Close</string>
    <string name="generic_ok">OK</string>
    <string name="generic_add">Add</string>
    <string name="generic_dash">-</string>
    <string name="generic_default_relying_party_name">Relying Party</string>
    <string name="generic_default_issuer_name">Issuer</string>
    <string name="generic_view_details">View details</string>
...


    <string name="quick_pin_create_button_continue">Continue</string>
    <string name="quick_pin_create_button_confirm">Confirm Passcode</string>
    <string name="quick_pin_verify_button_unlock">Unlock</string>
    <string name="quick_pin_create_title">Welcome to your Wallet</string>
    <string name="quick_pin_create_enter_subtitle">Secure your wallet with a PIN code. Choose a 6-digit passcode to protect your account.</string>
    <string name="quick_pin_create_reenter_subtitle">Re-enter the passcode to confirm</string>

    <string name="quick_pin_change_title">Change passcode</string>
    <string name="quick_pin_change_validate_current_subtitle">Type your current passcode</string>
    <string name="quick_pin_change_enter_new_subtitle">Select a passcode for future logins</string>
    <string name="quick_pin_change_reenter_new_subtitle">Re-enter the new passcode</string>

...
